[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://UI/dialogs/settings_dialog.gd" type="Script" id=2]
[ext_resource path="res://UI/dialogs/input_event_popup.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/test_beep.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="SettingsDialog" type="WindowDialog"]
visible = true
margin_right = 400.0
margin_bottom = 250.0
rect_min_size = Vector2( 520, 350 )
theme = ExtResource( 1 )
window_title = "SETTINGS_TITLE"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 508.0
margin_bottom = 338.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Control" parent="MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Master" type="HBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Master"]
margin_right = 392.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AUDIO_MASTER"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Master"]
margin_left = 396.0
margin_right = 496.0
margin_bottom = 12.0
rect_min_size = Vector2( 100, 0 )
step = 10.0
value = 50.0
ticks_on_borders = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Master"]
stream = ExtResource( 4 )

[node name="Music" type="HBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 37.0
margin_right = 496.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Music"]
margin_right = 392.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AUDIO_MUSIC"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Music"]
margin_left = 396.0
margin_right = 496.0
margin_bottom = 12.0
rect_min_size = Vector2( 100, 0 )
step = 10.0
value = 50.0
ticks_on_borders = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Music"]
stream = ExtResource( 4 )
bus = "Music"

[node name="SFX" type="HBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 58.0
margin_right = 496.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/SFX"]
margin_right = 392.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AUDIO_SFX"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/SFX"]
margin_left = 396.0
margin_right = 496.0
margin_bottom = 12.0
rect_min_size = Vector2( 100, 0 )
step = 10.0
value = 50.0
ticks_on_borders = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/TabContainer/Audio/VBoxContainer/SFX"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 79.0
margin_right = 496.0
margin_bottom = 91.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Graphics" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="ImageQuality" type="HBoxContainer" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/ImageQuality"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "IMAGE_QUALITY"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/ImageQuality"]
margin_left = 420.0
margin_right = 496.0
margin_bottom = 40.0

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 60.0
margin_right = 496.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/Resolution"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "RESOLUTION"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/Resolution"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dark"
items = [ "Dark", null, false, 0, null, "Light (not implemented yet)", null, false, 1, null ]
selected = 0

[node name="DisplayMode" type="HBoxContainer" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 89.0
margin_right = 496.0
margin_bottom = 114.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/DisplayMode"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "DISPLAY_MODE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/DisplayMode"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dark"
items = [ "Dark", null, false, 0, null, "Light (not implemented yet)", null, false, 1, null ]
selected = 0

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 118.0
margin_right = 496.0
margin_bottom = 130.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="GamePlay" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/GamePlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="GameSpeed" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/GameSpeed"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "GAME_SPEED"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/GameSpeed"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dark"
items = [ "Dark", null, false, 0, null, "Light (not implemented yet)", null, false, 1, null ]
selected = 0

[node name="BattlePreview" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 45.0
margin_right = 496.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/BattlePreview"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "BATTLE_PREVIEW"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/BattlePreview"]
margin_left = 420.0
margin_right = 496.0
margin_bottom = 40.0

[node name="ShortcutKey" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 89.0
margin_right = 496.0
margin_bottom = 114.0
size_flags_horizontal = 3

[node name="ToggleButton" type="Button" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey"]
margin_right = 21.0
margin_bottom = 25.0
toggle_mode = true
text = "+"
flat = true

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey"]
margin_left = 25.0
margin_top = 4.0
margin_right = 332.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SHORTCUT_KEY"

[node name="ResetButton" type="Button" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey"]
margin_left = 336.0
margin_right = 496.0
margin_bottom = 25.0
text = "RESET_SHORTCUT_KEY"

[node name="ShortcutKeyContainer" type="ScrollContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 118.0
margin_right = 496.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 100 )

[node name="ShortcutKeyBoxList" type="VBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKeyContainer"]
margin_right = 496.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKeyContainer/ShortcutKeyBoxList"]
margin_right = 496.0
margin_bottom = 17.0
text = "1111"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 222.0
margin_right = 496.0
margin_bottom = 234.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Popup" parent="MarginContainer/TabContainer/GamePlay" instance=ExtResource( 3 )]

[node name="ExtraFeatures" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Use2d" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/Use2d"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "USE_2D"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/Use2d"]
margin_left = 420.0
margin_right = 496.0
margin_bottom = 40.0

[node name="CameraShake" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 60.0
margin_right = 496.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/CameraShake"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "CAMERA_SHAKE"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/CameraShake"]
margin_left = 420.0
margin_right = 496.0
margin_bottom = 40.0

[node name="ColorBlindnessMode" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 104.0
margin_right = 496.0
margin_bottom = 129.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/ColorBlindnessMode"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "COLOR_BLINDNESS_MODE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/ColorBlindnessMode"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dark"
items = [ "Dark", null, false, 0, null, "Light (not implemented yet)", null, false, 1, null ]
selected = 0

[node name="UserInterfaceSize" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 133.0
margin_right = 496.0
margin_bottom = 158.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/UserInterfaceSize"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "USER_INTERFACE_SIZE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/UserInterfaceSize"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dark"
items = [ "Dark", null, false, 0, null, "Light (not implemented yet)", null, false, 1, null ]
selected = 0

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 162.0
margin_right = 496.0
margin_bottom = 174.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Other" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Other"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Language" type="HBoxContainer" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Other/VBoxContainer/Language"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Other/VBoxContainer/Language"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="HidePlayerName" type="HBoxContainer" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_top = 45.0
margin_right = 496.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Other/VBoxContainer/HidePlayerName"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "HIDE_PLAYER_NAME"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/TabContainer/Other/VBoxContainer/HidePlayerName"]
margin_left = 420.0
margin_right = 496.0
margin_bottom = 40.0

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_top = 89.0
margin_right = 496.0
margin_bottom = 101.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[connection signal="toggled" from="MarginContainer/TabContainer/Graphics/VBoxContainer/ImageQuality/CheckButton" to="." method="_on_image_quality_checkbutton_toggled"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Graphics/VBoxContainer/Resolution/OptionButton" to="." method="_on_resolution_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Graphics/VBoxContainer/DisplayMode/OptionButton" to="." method="_on_diaplay_mode_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/GamePlay/VBoxContainer/GameSpeed/OptionButton" to="." method="_on_game_speed_options_item_selected"]
[connection signal="toggled" from="MarginContainer/TabContainer/GamePlay/VBoxContainer/BattlePreview/CheckButton" to="." method="_on_battle_preview_checkbutton_toggled"]
[connection signal="toggled" from="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey/ToggleButton" to="." method="_shortcut_key_container_toggle_button_toggled"]
[connection signal="pressed" from="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey/ResetButton" to="." method="_shortcut_key_container_reset_button_toggled"]
[connection signal="toggled" from="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/Use2d/CheckButton" to="." method="_on_use2d_checkbutton_toggled"]
[connection signal="toggled" from="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/CameraShake/CheckButton" to="." method="_on_camera_shake_checkbutton_toggled"]
[connection signal="item_selected" from="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/ColorBlindnessMode/OptionButton" to="." method="_on_color_blindness_mode_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/UserInterfaceSize/OptionButton" to="." method="_on_user_interface_size_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Other/VBoxContainer/Language/OptionButton" to="." method="_on_language_options_item_selected"]
[connection signal="toggled" from="MarginContainer/TabContainer/Other/VBoxContainer/HidePlayerName/CheckButton" to="." method="_on_hide_player_name_checkbutton_toggled"]
